# AI-Talent-Match

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.claude/: settings.json
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_add_identity_tables.py  0002_add_candidate_tables.py  0003_add_job_tables.py  0004_add_matching.py  0005_add_applications.py  0006_add_agent_tables.py  0007_add_outreach_drafts.py  0008_add_notifications.py
apps/api/src/: main.py
apps/api/src/agents/apply_agent/: graph.py
apps/api/src/agents/recruiter_agent/: graph.py
apps/api/src/api/: deps.py  exception_handlers.py
apps/api/src/api/v1/: router.py
apps/api/src/application/: exceptions.py  tokens.py
apps/api/src/application/agent/: constraints.py  reasoning.py  service.py
apps/api/src/application/ai/: ports.py
apps/api/src/application/applications/: service.py
apps/api/src/application/auth/: ports.py  service.py
apps/api/src/application/candidate/: extraction_schema.py  parsing_service.py  ports.py  service.py
apps/api/src/application/company/: service.py
apps/api/src/application/job/: extraction_schema.py  parsing_service.py  ports.py  service.py
apps/api/src/application/matching/: ports.py  scoring.py  service.py
apps/api/src/application/notifications/: service.py
apps/api/src/application/outreach/: generation_schema.py  service.py
apps/api/src/core/: config.py  logging.py  middleware.py  rate_limit.py  sentry.py
apps/api/src/domain/agent/: entities.py  repository.py
apps/api/src/domain/applications/: entities.py  repository.py
apps/api/src/domain/candidate/: entities.py  file_validation.py  repository.py
apps/api/src/domain/company/: entities.py  repository.py
apps/api/src/domain/job/: entities.py  repository.py
apps/api/src/domain/matching/: entities.py  repository.py
apps/api/src/domain/notifications/: entities.py  repository.py
apps/api/src/domain/outreach/: entities.py  repository.py
apps/api/src/domain/user/: entities.py  repository.py
apps/api/src/infrastructure/ai/: llm_reranker_client.py  nvidia_client.py  ollama_client.py
apps/api/src/infrastructure/db/: base.py  models.py  repositories.py  session.py
apps/api/src/infrastructure/oauth/: google_oauth_client.py
apps/api/src/infrastructure/parsing/: text_extraction.py
apps/api/src/infrastructure/security/: jwt_service.py  password_hasher.py
apps/api/src/infrastructure/storage/: s3_client.py
apps/api/tests/eval/: test_matching_ranking_quality.py  test_resume_extraction_accuracy.py
apps/api/tests/integration/: conftest.py  test_repositories.py
apps/api/tests/unit/: fakes.py  test_health.py
(+131 files in other folders)
