[project]
name = "ai-talent-match-api"
version = "0.1.0"
description = "AI Talent Match — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "sentry-sdk[fastapi]>=2.18",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "qdrant-client>=1.12",
    "boto3>=1.35",
    "python-multipart>=0.0.12",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends(...)-as-default-argument is the framework's own idiom, not a bug.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
# tests/eval is excluded from the default run — it makes real Ollama Cloud calls and is meant
# to be run explicitly (`uv run pytest tests/eval -q -s`), not on every local `pytest` invocation.
testpaths = ["tests/unit", "tests/integration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
